sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:13: error: not found: value j
    setValeur(j-1,v)
              ^